--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,5 +1,6 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+@import "../../node_modules/animate.css/source/animate.css";
 
 
 * {
