--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,7 +1,7 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
 @import "../../node_modules/animate.css/source/animate.css";
-
+@import url("https://fonts.googleapis.com/css?family=Roboto:700,900");
 
 * {
     margin: 0;
